radio-service-ui/src/Wrapper.scss
@import "./colors.scss";

html, body { min-height: 100vh; }
*, *:before, *:after { box-sizing: border-box; }

.main-banner p,
.secondary-banner p {
  margin: 0;
  display: flex;
  justify-content: center;
}

.main-banner p img {
  width: 200px !important;
  height: 200px !important;
}

.secondary-banner p img {
  width: 970px;
  height: 90px;
  max-width: 100%;
}

.additional-banner p {
  margin: 0;
  display: flex;
  justify-content: center;

  img {
    width: 468px;
    height: 60px;
    max-width: 100%;
  }
}

.wrapper {
  height: 100vh;
  background: linear-gradient(90deg, rgba(24,141,154,1) 0%, rgba(47,9,66,1) 35%, rgba(0,212,255,1) 100%);

  .content {
    overflow: auto;
    border-top-left-radius: 30px;
    border-bottom-left-radius: 30px;
    background-size: cover;

    .bg-wrapper {
      padding: 20px;
      width: 100%;
      min-height: 100%;
      background: rgba(0, 0, 0, 0.8);
    }
  }
}

// --------------- LOADER START

.loader-container {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.35);
  .loader {
    animation: spin 1s infinite linear;
    border: solid 2vmin transparent;
    border-radius: 50%;
    border-right-color: #09f;
    border-top-color: #09f;
    box-sizing: border-box;
    height: 20vmin;
    left: calc(50% - 10vmin);
    position: fixed;
    top: calc(50% - 10vmin);
    width: 20vmin;
    z-index: 1;
    &:before {
      animation: spin 2s infinite linear;
      border: solid 2vmin transparent;
      border-radius: 50%;
      border-right-color:  #FF9E29;
      border-top-color:  #FF9E29;
      box-sizing: border-box;
      content: "";
      height: 16vmin;
      left: 0;
      position: absolute;
      top: 0;
      width: 16vmin;
    }
    &:after {
      animation: spin 3s infinite linear;
      border: solid 2vmin transparent;
      border-radius: 50%;
      border-right-color: #6ff;
      border-top-color: #6ff;
      box-sizing: border-box;
      content: "";
      height: 12vmin;
      left: 2vmin;
      position: absolute;
      top: 2vmin;
      width: 12vmin;
    }
  }
}

@keyframes spin {
  100% {
    transform:rotate(360deg);
  }
}

// ------------ LOADER END

@media screen and (max-width: 992px) {
  .wrapper {
    position: relative;
    width: 100%;
    background: linear-gradient(90deg, rgb(32, 34, 36) 0%, rgb(0, 0, 0) 100%);

    .hamburger {
      height: 60px;
      overflow: hidden;
      padding: 8px 10px;
      z-index: 20;
      background: $black;

      a.logo-link, a.logo-link img {
        height: 100%;
      }

      .toggle {
        position: relative;
        width: 40px;
        height: 100%;
        background: url('images/menu.png');
        background-repeat: no-repeat;
        background-size: 30px;
        background-position: center;
        cursor: pointer;
        transition: 0.3s;
      }

      .toggle.active {
        background: url('images/close.png');
        background-repeat: no-repeat;
        background-size: 25px;
        background-position: center;
        cursor: pointer;
      }
    }

    .content {
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
    }

    .sidebar {
      width: 0%;
      z-index: 10;
      position: absolute;
      padding-top: 60px;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      background: linear-gradient(90deg, rgb(19, 175, 192) 0%, rgb(9, 92, 109) 100%);
      overflow-x: hidden;
      transition: 0.3s;
    }
  }
}

// LOADING

.lds-ellipsis {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
}
.lds-ellipsis div {
  position: absolute;
  top: 33px;
  width: 13px;
  height: 13px;
  border-radius: 50%;
  background: #fff;
  animation-timing-function: cubic-bezier(0, 1, 1, 0);
}
.lds-ellipsis div:nth-child(1) {
  left: 8px;
  animation: lds-ellipsis1 0.6s infinite;
}
.lds-ellipsis div:nth-child(2) {
  left: 8px;
  animation: lds-ellipsis2 0.6s infinite;
}
.lds-ellipsis div:nth-child(3) {
  left: 32px;
  animation: lds-ellipsis2 0.6s infinite;
}
.lds-ellipsis div:nth-child(4) {
  left: 56px;
  animation: lds-ellipsis3 0.6s infinite;
}
@keyframes lds-ellipsis1 {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}
@keyframes lds-ellipsis3 {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(0);
  }
}
@keyframes lds-ellipsis2 {
  0% {
    transform: translate(0, 0);
  }
  100% {
    transform: translate(24px, 0);
  }
}

